namespace OpenDMSBackend.Core.Model
{
    public interface IFolder : IContainer,IContainee
    {
    }
}
